Bug 381500 - Task Manger doesn't display starting indicator for some applications with pinned launchers
Summary: Task Manger doesn't display starting indicator for some applications with pin...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (show other bugs)
Version: 5.10.2
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-06-21 18:46 UTC by MitraX
Modified: 2017-06-23 13:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description MitraX 2017-06-21 18:46:47 UTC
DESCRIPTION:
Task Manager displays starting indicator (spinning circle) when application launcher is clicked, but for some applications with pinned launchers (e.g. Kate) there’s no starting indicator.

REPRODUCIBLE: Always

STEPS TO REPRODUCE:

1) Pin the Kate editor launcher to the Task Manger widget

2) Click the Kate launcher

ACTUAL RESULTS:
Kate editor is started but spinning indicator is not displayed.

EXPECTED RESULTS:
The spinning indicator is displayed like for many other applications.

NOTE:
The starting indicator is displayed if a user runs the Kate editor using the Application Launcher, the issue exists only for pinned icons.

ENVIRONMENT:
Platform: KDE Neon
KDE Plasma Version: 5.10.2
KDE Framework Version: 5.35.0
Qt Version: 5.9.0
Comment 1 Kai Uwe Broulik 2017-06-22 07:22:20 UTC
I can confirm. Kate does not yield a startup task (I do get a bouncing cursor, though) when run through a pinned launcher, while e.g. Dolphin does. It works fine when started from Kickoff or KRunner.
Comment 2 Eike Hein 2017-06-22 15:31:31 UTC
Yeah, reproduced this as well yesterday. Looking into it.
Comment 3 Eike Hein 2017-06-23 13:02:30 UTC
Git commit d1b5447f57e4c233523dd3fc0e12f4c863957f56 by Eike Hein.
Committed on 23/06/2017 at 10:13.
Pushed by hein into branch 'Plasma/5.10'.

Use KRun::runApplication, add missing KActivities::notifyAccessed calls.

Summary:
Otherwise we:
* ... don't get startup notifications.
* ... don't contribute data to recent/most used apps.

This is a surprisingly large oversight.

Reviewers: #plasma

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D6354

M  +22   -5    libtaskmanager/launchertasksmodel.cpp

https://commits.kde.org/plasma-workspace/d1b5447f57e4c233523dd3fc0e12f4c863957f56